# vertcoin-core

./: .gitignore  DEVELOPMENT-FUND.md  GENESIS-BLOCK-MINING.md  PAPERCLIPS-IMPLEMENTATION-PLAN.md  README.md  SEED-NODE-SETUP.md  configure.ac
contrib/seeds/: nodes_main.txt  nodes_test.txt
doc/: CLI-COMMANDS.md
docker/: .env.example  Dockerfile  Dockerfile.seed  README.md  docker-compose.seed.yml  docker-compose.yml  run-node.sh
src/: chainparams.cpp  chainparamsseeds.h  clientversion.cpp  gen_genesis.cpp  mine_mainnet_genesis.cpp  mine_regtest_genesis.cpp  mine_signet_genesis.cpp  mine_testnet_genesis.cpp  pow.cpp  validation.cpp
src/consensus/: params.h
src/node/: miner.cpp
src/qt/: bitcoinunits.cpp  guiutil.cpp  intro.cpp
src/util/: system.cpp
